Added toast draft and editor UI adjustments

--- a/priv/static/sources/css/main.css
+++ b/priv/static/sources/css/main.css
@@ -29,3 +29,36 @@ a:hover {
 .child {
 	@apply ml-4;
 }
+
+.slide-up {
+	animation: slide-up 0.2s ease-in-out;
+}
+
+.slide-down {
+	animation: slide-down 0.2s ease-in-out;
+}
+
+@keyframes slide-up {
+	0% {
+		transform: translateY(24px);
+		opacity: 0;
+		display: none;
+	}
+	100% {
+		transform: translateY(0px);
+		opacity: 1;
+		display: block;
+	}
+}
+
+@keyframes slide-down {
+	0% {
+		opacity: 1;
+		display: block;
+	}
+	100% {
+		transform: translateY(24px);
+		opacity: 0;
+		display: none;
+	}
+}
